<resources>
    <string name="app_name">Todo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="to_do_details">Task details</string>
    <string name="to_do_description">Todo description</string>
    <string name="overdue">Overdue</string>
    <string name="more">More</string>
    <string name="reached_max_limit">Reached max limit</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="remindMe">Remind me</string>
    <string name="end_time">End time</string>
    <string name="start_time">Start time</string>
    <string name="starting_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="due_date">Due date</string>
    <string name="priority">Priority</string>
    <string name="category">Category</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="messages">Messages</string>
    <string name="todo_text">Todo</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="dashboard">Dashboard</string>
    <string name="dash_board_filter">Filter</string>
    <string name="dash_board_header">Dashboard</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="version">Version</string>
    <string name="details">Details</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="date_heading">Date</string>
    <string name="apply_filter">Apply filter</string>
    <string name="endDate">End date</string>
    <string name="view_todo_list">View todo list</string>
    <string name="view_done_list">View done list</string>
    <string name="dash_board_string">Please tap on the filter icon to view dashboard.</string>
    <string name="delete_massage">Are you sure you want to delete this task?</string>
    <string name="task_complete_message"> Well done for completing this task!</string>
    <string name="cannot_delete_empty_task">Sorry, you cannot delete empty task</string>
    <string name="update_saved_task_message">Sorry, you cannot update completed task</string>
    <string name="cannot_share_empty_task">Sorry, you cannot share empty task</string>
    <string name="add_task_details">Please input task details</string>
    <string name="cannot_complete_incomplete_task">Please create the task first</string>
    <string name="no_task">You have no task todo.</string>
    <string name="please_add_task">Please add a task + .</string>
    <string name="done_empty_list">There are no tasks that are done.</string>
    <string name="filter_by_to_todo_list">Please switch to todo list to add a task.</string>
    <string name="task_created">Task created successfully.</string>
    <string name="empty_list_dash_board">There are no tasks in that range, please filter again.</string>

</resources>
