<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:paddingTop="10dp">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/dash_board_filter"
                android:textColor="@color/androidDefaultColor"
                android:textSize="18sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/header"
            android:layout_marginTop="10dp"
            android:background="@drawable/gradient_line" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/toDoRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todo_text"
                    android:textColor="@color/androidDefaultColor" />

                <RadioButton
                    android:id="@+id/doneRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/done"
                    android:textColor="@color/androidDefaultColor" />

            </RadioGroup>


            <LinearLayout
                android:id="@+id/fromDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starting_date"
                    android:textColor="@color/androidDefaultColor" />

                <com.mrbreak.todo.components.CustomEditText
                    android:id="@+id/dateFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:focusable="false"
                    android:hint="DD/MM/YYYY"
                    android:imeOptions="actionDone"
                    android:inputType="none" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/toDate"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"
                    android:textColor="@color/androidDefaultColor" />

                <com.mrbreak.todo.components.CustomEditText
                    android:id="@+id/dateTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:focusable="false"
                    android:hint="DD/MM/YYYY"
                    android:imeOptions="actionDone"
                    android:inputType="none" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="right"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/cancelFilter"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/teal" />

        <TextView
            android:id="@+id/applyFilter"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/teal_button_background"
            android:gravity="center"
            android:text="@string/apply_filter"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>


