<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.DashBoardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/closeImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:padding="8dp"
                    android:src="@mipmap/ic_close_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/dash_board_header"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/filter"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/header_background"
                    android:elevation="2dp"
                    android:gravity="center"
                    android:text="@string/dash_board_filter"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <org.eazegraph.lib.charts.PieChart
                android:id="@+id/piechart"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_below="@+id/toolBar"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/emptyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/dash_board_string"
                android:textSize="18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/legendListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/piechart"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>