<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/headerTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/date_heading"
                    android:textSize="18sp" />

            </RelativeLayout>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_below="@+id/header"
                android:layout_marginTop="10dp"
                android:background="@drawable/gradient_line" />


            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v4.widget.Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content"
                android:layout_marginRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/cancelButton"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/okButton"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/teal" />

                <TextView
                    android:id="@+id/okButton"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/teal_button_background"
                    android:gravity="center"
                    android:text="@string/ok"
                    android:textColor="@color/white" />
            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>