<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.ToDoDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/closeImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:padding="8dp"
                    android:src="@mipmap/ic_close_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/to_do_details"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/doneImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:src="@mipmap/ic_done_black_24dp"
                    android:visibility="visible" />

            </RelativeLayout>

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolBar"
            android:fillViewport="true"
            android:paddingBottom="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/categoryContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/category" />

                        <Spinner
                            android:id="@+id/categorySpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp" />

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="1dp"
                            android:background="@color/darkGrey" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="20"
                        android:gravity="center|bottom"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/addCategory"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="right"
                            android:elevation="2dp"
                            android:src="@mipmap/add_category" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/priorityContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dueDateContainer"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/priority" />

                    <Spinner
                        android:id="@+id/prioritySpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/darkGrey" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/priorityContainer">

                    <LinearLayout
                        android:id="@+id/dueDateContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="40"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/due_date" />

                            <EditText
                                android:id="@+id/dueDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:imeOptions="actionDone"
                                android:inputType="none"
                                android:textSize="14sp"
                                tools:ignore="TextFields" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="30"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/start_time" />

                            <EditText
                                android:id="@+id/startTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:inputType="none"
                                android:textSize="14sp"
                                tools:ignore="TextFields" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="30"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/end_time" />

                            <EditText
                                android:id="@+id/endTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:imeOptions="actionDone"
                                android:inputType="none"
                                android:textSize="14sp"
                                tools:ignore="TextFields" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/dueDateContainer"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/maxLimit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:text="@string/reached_max_limit"
                                android:textColor="@color/red"
                                android:visibility="gone" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:text="@string/to_do_details" />

                        </RelativeLayout>


                        <EditText
                            android:id="@+id/content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:inputType="none"
                            android:maxLength="400"
                            tools:ignore="TextFields" />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/alarmIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/outline_notifications_black_24" />

                    <TextView
                        android:id="@+id/remindMe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/alarmIcon"
                        android:text="@string/remindMe" />

                    <RelativeLayout
                        android:id="@+id/reminder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/remindMeTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginRight="10dp"
                            android:src="@mipmap/outline_chevron_right_black_24" />

                        <TextView
                            android:id="@+id/alarmSelected"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_toLeftOf="@+id/remindMeTime"
                            android:text="15 minutes before" />

                    </RelativeLayout>


                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/androidDefaultColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/done" />

                    <Switch
                        android:id="@+id/doneToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textOff="OFF"
                        android:textOn="ON" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/menu_option_background"
            android:elevation="2dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/editLinearLayout"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/editImageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/ic_edit_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Edit"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/deleteLinearLayout"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/deleteImageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/ic_delete_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Delete"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/moreLinearLayout"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/moreImageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/baseline_more_vert_black_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="More"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>